--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.test.testh264sender.ui.LaifengScreenRecordActivity">
+        <activity android:name="com.test.testh264sender.ui.ScreenRecordVC">
 
         </activity>
         <activity android:name="com.test.testh264sender.ui.StartActivity">
