--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.test.testh264sender"
+        applicationId "com.recorder.h264sender"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
