--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.test.testh264sender">
+    package="com.recorder.h264sender">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -15,17 +15,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.test.testh264sender.ui.ScreenRecordVC">
+        <activity android:name="com.recorder.h264sender.view.ScreenRecordVC"/>
 
-        </activity>
-        <activity android:name="com.test.testh264sender.ui.StartActivity">
+        <activity android:name="com.recorder.h264sender.view.StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.LaifengLivingActivity"></activity>
     </application>
 
 </manifest>
